[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/error.mp3" type="AudioStream" id=1]
[ext_resource path="res://themes/BlueMetal.theme" type="Theme" id=2]
[ext_resource path="res://scenes/Dialog.gd" type="Script" id=3]

[node name="Dialog" type="WindowDialog"]
margin_left = 64.0
margin_top = 184.0
margin_right = 448.0
margin_bottom = 320.0
theme = ExtResource( 2 )
popup_exclusive = true
window_title = ":oh:"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -184.0
margin_right = 184.0
margin_bottom = 24.0
text = "An error occured..."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = -5.0
text = "Okay."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorLabel" type="RichTextLabel" parent="."]
modulate = Color( 1, 1, 1, 0.501961 )
margin_left = 8.0
margin_top = 24.0
margin_right = 376.0
margin_bottom = 104.0
bbcode_enabled = true
bbcode_text = "Error goes here
.
.
.
wow"
text = "Error goes here
.
.
.
wow"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )
volume_db = -10.0

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
